# dataset-manager

./: .gitignore  ConvertIntanToNWB.py  LICENSE  README-2photon.md  README-behavior.md  README-ephys.md  README-widefield.md  README.md  app.py  ephys_process.ipynb  nwb_utils.ipynb  pyproject.toml  readme.md  requirements.txt  run_app.bat  run_app.sh
Matlab/: Widefield_2Photon_nwb.m  input_widefield_2P.xlsx
converters/: ConvertIntanToNWB.py  Convert_h5ToNWB.py  WriteNWB.py
data-prep/: Convert_h5ToNWB.py  aggregate.py  prep.py  requirements.txt  volumetric_imaging_h5ToNWB.py
data-prep/data-prep/: share.py
data-prep/lib/: ephys.py  utils.py
data-prep/matlab/: JD_2Photon_nwb.m  Widefield_nwb.m
data-prep/templates/: recordings_stim.xlsx
data-prep/visualizations/: dandiarchive.ipynb
data-sharing/: prep.py  share.py
data_bundling_ui/: schema.py  validation.py
dataset_manager/: __init__.py  export.py  schema.py  validation.py
lib/: behavior.py  utils.py
lib/lib/: behavior.py
lib/matlab/: Behavior_nwb.m  Tiff2h5converter.m  h5_to_nwb.ipynb
lib/templates/: filters.txt
matlab/: Widefield_2Photon_nwb.m  Widefield_2Photon_nwb_old.m  Widefield_nwb.m
matlab/FigFunctions/: Fig1E.m  Fig1F.m  Fig1G.m  Fig2C.m  Fig3C.m  Fig3D.m  Fig4B.m  Fig4C.m  Fig4D.m  Fig4E.m  Fig5A.m  (+15 more)
resources/: DM_icon.ai
templates/: LICENSE  README-2photon.md  electrode_mappings.xlsx  ephys_process.ipynb  input.xlsx  input_2photon.xlsx  input_behavior.xlsx  input_ephys.xlsx  input_stim.xlsx  input_widefield.xlsx  input_widefield_2P.xlsx  recordings_2photon.xlsx  recordings_ephys_electrode_mappings.xlsx  recordings_widefield.xlsx
xls_generator/: __init__.py  export.py  schema.py  validation.py
(+50 files in other folders)
