[project]
name = "data-bundling-ui"
version = "0.1.0"
description = "App to bundle data and metadata for U19 experiments' data conversion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "pynwb>=2.5",
    "dandischema>=0.9",
    "nwbinspector>=0.5",
    "neuroconv",
    "pyyaml"
]
authors = [
    {name = "Vincent Prevosto", email = "prevosto@mit.edu"}
]
