[project]
name = "dataset-manager"
version = "0.1.1"
description = "App to bundle data and metadata for U19 experiments' data conversion"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CC-BY-4.0"}
classifiers = [
    "License :: OSI Approved :: Creative Commons Attribution 4.0 International License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "pynwb>=2.5",
    "dandischema>=0.9",
    "nwbinspector>=0.5",
    "neuroconv",
    "pyyaml",
    "neurosift",
]
authors = [
    {name = "Vincent Prevosto", email = "prevosto@mit.edu"}
]
